# bering_banking_system

./: README.md  pyproject.toml
.github/workflows/: python-app.yml
app/: __init__.py  card_state.py  config.py  models.py
app/views/: account_views.py  accounts_views.py  auth_views.py  card_views.py  cards_views.py  index_views.py  main_views.py  users_views.py
tests/: conftest.py
tests/unit/: test_accounts_views.py  test_auth_views.py  test_bank_system.py  test_cards_views.py  test_users_views.py
